--- a/application/modules/default/views/layout/home_template.phtml
+++ b/application/modules/default/views/layout/home_template.phtml
@@ -43,7 +43,7 @@
     <link href="/theme/flatui/css/startpage.css" rel="stylesheet">
     <!-- third party -->
     <link href="/theme/flatui/css/fontawsome/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="/theme/flatui/js/lib/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
     <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
 </head>
 <body>
