--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -47,7 +47,7 @@
 	.downloadDiv{
 		width: 100%; 
 		background-color: #fff; 
-		padding-bottom: 20px;
+		padding-bottom: 10px; 
 		text-align: center;
 		img{
 			width: 92%;
@@ -92,6 +92,10 @@
 			}
 			span.date{
 				font-size: smaller; text-align:right
+			}
+			span.comments{
+				font-size: smaller;  
+				padding-left: 20px;				
 			}
 		}
 	}
