--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -90,12 +90,16 @@
 			span.title{
 				text-decoration: underline;
 			}
+			.newsrow{
+				display: block;
+				width: 100%;
+			}
 			span.date{
 				font-size: smaller; text-align:right
 			}
-			span.comments{
+			span.newscomments{
 				font-size: smaller;  
-				padding-left: 20px;				
+				float: right;
 			}
 		}
 	}
