--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1746,6 +1746,9 @@ ul.meta-nav-top
           display: block; 
           font-weight: normal;
         }
+        span.source{
+            color:#4e4e4e;
+        }
         div.projectdetailRating{
           float: right; 
           width:150px; 
