--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -132,6 +132,9 @@
 	    	#rss-feeds{
 	    	  	border: 1px solid #ccd4d8 !important;
 	    	}
+	    	#blogJson{
+	    	  	border: 1px solid #ccd4d8 !important;
+	    	}
 	    	#lastcomments{
 	    	  	border: 1px solid #ccd4d8 !important;
 	    	}
