--- a/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
+++ b/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
@@ -74,3 +74,10 @@
             </div>          
             <?php } ?>
         </div>
+
+<?php $this->inlineScript()->appendScript(
+    '    $(document).ready(function(){                               
+                RssNews.setup();   
+                BlogJson.setup();                    
+            });
+        ');
