--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1365,13 +1365,17 @@ ul.meta-nav-top
           padding-left: 5px;
           padding-right: 5px;
         }
-        .explore-product-image {
+        .imageContainer{
+           height:167px; 
+           display:flex;
+           justify-content: center;
+           align-items: center;          
+        }
+         .explore-product-image {
             max-width: 95%;
             max-height: 167px;
-        }
-        img{
-          max-width: 100%;
-        }
+          }
+      
         .contentLeft
         {
           float: left; 
