--- a/application/modules/default/views/scripts/explore/partials/products.phtml
+++ b/application/modules/default/views/scripts/explore/partials/products.phtml
@@ -39,7 +39,7 @@ foreach ($this->products as $this->product) {
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 explore-product-imgcolumn">
         <figure>
             <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product->project_id, ''); ?>">
-                <div class="text-center">
+                <div class="text-center imageContainer_">
                 <img src="<?php echo $helperImage->Image($this->product->image_small, array('width' => 167, 'height' => 167,'crop' => 0)); ?>" class="explore-product-image"/>
                 </div>
             </a>
