comment frontpage overflow hidden

--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5517,6 +5517,7 @@ span.page-views {
     border-bottom:1px solid #ccd4d8 ;
     padding-top: 5px;
     padding-bottom: 5px;
+    overflow: hidden;
     p{
       margin: 0;
     }
