--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -43,7 +43,7 @@ $productFileInfos = $helpProjectFiles->projectFiles($this->product->ppload_colle
 $this->product->title = Default_Model_HtmlPurify::purify($this->product->title);
 $this->product->description = Default_Model_BBCode::renderHtml(Default_Model_HtmlPurify::purify($this->product->description));
 $this->product->version = Default_Model_HtmlPurify::purify($this->product->version);
-$this->product->embed_code =Default_Model_HtmlPurify::purify($this->product->embed_code,Default_Model_HtmlPurify::ALLOW_EMBED);
+//$this->product->embed_code =Default_Model_HtmlPurify::purify($this->product->embed_code,Default_Model_HtmlPurify::ALLOW_EMBED);
 $this->product->link_1 = Default_Model_HtmlPurify::purify($helpAddDefaultScheme->addDefaultScheme($this->product->link_1),Default_Model_HtmlPurify::ALLOW_URL);
 $this->product->github_code = Default_Model_HtmlPurify::purify($this->product->github_code,Default_Model_HtmlPurify::ALLOW_URL);
 $this->product->facebook_code = Default_Model_HtmlPurify::purify($this->product->facebook_code,Default_Model_HtmlPurify::ALLOW_URL);
