add product: embed code

--- a/application/modules/default/views/scripts/product/viewscripts/input_embedcode.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_embedcode.phtml
@@ -25,7 +25,7 @@
         <?php if ($this->element->isRequired()) { ?>
             <div class="small grey bold-font pull-left margin-right-5">*</div>
         <?php } ?>
-        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Embed Media Code (Youtube, Vimeo, Soundcloud etc.)</label>
+        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">HTML or Embed Media Code (Youtube, Vimeo, Soundcloud etc.)</label>
     </div>
     <div class="col-sm-12">
         <textarea class="form-control"
