--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -144,6 +144,8 @@
 
 
                      function getPploadFiles(page) {
+                          activeCarouselFirstImg();
+                          
                          var collectionId = $pploadCollection.attr('data-ppload-collection-id');
                          if (!page) {
                              page = 1;
@@ -696,6 +698,7 @@
                                      pploadApiUri + 'collections/download/id/' + collectionId
                                  );
 
+                                 
                                  /*
                                  var b= false;
                                  if (isPlayable && !$plingMusic.attr('src')) {
@@ -711,10 +714,12 @@
                                  $('.carousel-indicators > li').first().addClass('active');
                                     b = true;
                                  }
+                                 
                                  if(!b){
                                    activeCarouselFirstImg();
                                  }
-                                 */
+                                  */
+
 
                                  if (data.pagination.next) {
                                      getPploadFiles(data.pagination.next);
