--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -219,7 +219,8 @@ $categoryPath[] = $valueCatId;
                                 <?= $this->form->facebook_code ?>
                                 <?= $this->form->twitter_code ?>
                                 <?= $this->form->google_code ?>
-                                <?= $this->form->tags ?>
+                                <?= $this->form->tags  ?>
+                                <?= $this->form->tagsuser ?>
                             </section>
 
                             <h3>Files</h3>
